# taglib

./: .gitignore  CMakeLists.txt  README.md
taglib/mp4/: mp4tag.cpp
tools/: CMakeLists.txt  copymqatags.cpp
